added some translation

--- a/contribution/lang/ar.json
+++ b/contribution/lang/ar.json
@@ -2648,6 +2648,43 @@
  	 	 	"eng": "Requires you to be in the Top 2 Gangs on the Occupation Leaderboard"
  	 	}
  	},
+ 	"inventory": {
+ 	 	"scrap": {
+ 	 	 	"trans": "خردة",
+ 	 	 	"eng": "scrap"
+ 	 	},
+ 	 	"ui": {
+ 	 	 	"useItem": {
+ 	 	 	 	"localFightCantUseItem": {
+ 	 	 	 	 	"trans": "لا يمكنك استخدام العنصر أثناء معارك الشوارع، والعناصر متاحة فقط أثناء الأبراج المحصنة",
+ 	 	 	 	 	"eng": "You cannot use item during street fights, items are only available during dungeons"
+ 	 	 	 	}
+ 	 	 	},
+ 	 	 	"autoScrap": {
+ 	 	 	 	"noItem": {
+ 	 	 	 	 	"trans": "لا يوجد عنصر خردة السيارات",
+ 	 	 	 	 	"eng": "No item to auto scrap"
+ 	 	 	 	}
+ 	 	 	}
+ 	 	},
+ 	 	"useItemWithExistingBuffModal": {
+ 	 	 	"title": {
+ 	 	 	 	"trans": "هل أنت متأكد أنك تريد استخدام هذا العنصر؟",
+ 	 	 	 	"eng": "Are you sure you want to use this item?"
+ 	 	 	},
+ 	 	 	"description": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"remaining"
+ 	 	 	 	],
+ 	 	 	 	"trans": "باستخدام هذا العنصر ، سيقوم بتحديث مؤقت Buff النشط الحالي وتكديس التأثير إن أمكن. (${remaining})",
+ 	 	 	 	"eng": "By using this item will refresh the timer of current active buff and stack the effect if applicable. (${remaining})"
+ 	 	 	},
+ 	 	 	"confirmText": {
+ 	 	 	 	"trans": "يستخدم",
+ 	 	 	 	"eng": "Use"
+ 	 	 	}
+ 	 	}
+ 	},
  	"misc,durability": {
  	 	"trans": "متانة",
  	 	"eng": "durability"
@@ -6750,39 +6787,6 @@
  	 	 	"eng": "Dungeon cleared!"
  	 	}
  	},
- 	"inventory": {
- 	 	"ui": {
- 	 	 	"useItem": {
- 	 	 	 	"localFightCantUseItem": {
- 	 	 	 	 	"trans": "لا يمكنك استخدام العنصر أثناء معارك الشوارع، والعناصر متاحة فقط أثناء الأبراج المحصنة",
- 	 	 	 	 	"eng": "You cannot use item during street fights, items are only available during dungeons"
- 	 	 	 	}
- 	 	 	},
- 	 	 	"autoScrap": {
- 	 	 	 	"noItem": {
- 	 	 	 	 	"trans": "لا يوجد عنصر خردة السيارات",
- 	 	 	 	 	"eng": "No item to auto scrap"
- 	 	 	 	}
- 	 	 	}
- 	 	},
- 	 	"useItemWithExistingBuffModal": {
- 	 	 	"title": {
- 	 	 	 	"trans": "هل أنت متأكد أنك تريد استخدام هذا العنصر؟",
- 	 	 	 	"eng": "Are you sure you want to use this item?"
- 	 	 	},
- 	 	 	"description": {
- 	 	 	 	"vars": [
- 	 	 	 	 	"remaining"
- 	 	 	 	],
- 	 	 	 	"trans": "باستخدام هذا العنصر ، سيقوم بتحديث مؤقت Buff النشط الحالي وتكديس التأثير إن أمكن. (${remaining})",
- 	 	 	 	"eng": "By using this item will refresh the timer of current active buff and stack the effect if applicable. (${remaining})"
- 	 	 	},
- 	 	 	"confirmText": {
- 	 	 	 	"trans": "يستخدم",
- 	 	 	 	"eng": "Use"
- 	 	 	}
- 	 	}
- 	},
  	"tier": {
  	 	"trash": {
  	 	 	"name": {
@@ -7412,6 +7416,12 @@
  	 	 	 	 	"trans": "اسمح لهذا اللاعب بإدارة إذن اللاعبين الآخرين",
  	 	 	 	 	"eng": "Allow this player to manage permission of other players"
  	 	 	 	}
+ 	 	 	}
+ 	 	},
+ 	 	"error": {
+ 	 	 	"inviteCooldown": {
+ 	 	 	 	"trans": "لقد قمت بالفعل بدعوة هذا اللاعب مؤخرًا",
+ 	 	 	 	"eng": "You have already invited this player recently"
  	 	 	}
  	 	},
  	 	"notInGang": {
