--- a/contribution/lang/cs.json
+++ b/contribution/lang/cs.json
@@ -2648,6 +2648,43 @@
  	 	 	"eng": "Requires you to be in the Top 2 Gangs on the Occupation Leaderboard"
  	 	}
  	},
+ 	"inventory": {
+ 	 	"scrap": {
+ 	 	 	"trans": "šrot",
+ 	 	 	"eng": "scrap"
+ 	 	},
+ 	 	"ui": {
+ 	 	 	"useItem": {
+ 	 	 	 	"localFightCantUseItem": {
+ 	 	 	 	 	"trans": "Tuto položku nelze použít během boje na ulicích, je k dispozici pouze v průběhu dungeonů",
+ 	 	 	 	 	"eng": "You cannot use item during street fights, items are only available during dungeons"
+ 	 	 	 	}
+ 	 	 	},
+ 	 	 	"autoScrap": {
+ 	 	 	 	"noItem": {
+ 	 	 	 	 	"trans": "Nenalezen předmět pro automatické rozložení",
+ 	 	 	 	 	"eng": "No item to auto scrap"
+ 	 	 	 	}
+ 	 	 	}
+ 	 	},
+ 	 	"useItemWithExistingBuffModal": {
+ 	 	 	"title": {
+ 	 	 	 	"trans": "Jste si jisti, že chcete tuto položku použít?",
+ 	 	 	 	"eng": "Are you sure you want to use this item?"
+ 	 	 	},
+ 	 	 	"description": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"remaining"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Použitím této položky obnoví časovač aktuálního aktivního buff a naskládáte efekt, pokud je to použitelné. (${remaining})",
+ 	 	 	 	"eng": "By using this item will refresh the timer of current active buff and stack the effect if applicable. (${remaining})"
+ 	 	 	},
+ 	 	 	"confirmText": {
+ 	 	 	 	"trans": "Použití",
+ 	 	 	 	"eng": "Use"
+ 	 	 	}
+ 	 	}
+ 	},
  	"misc,durability": {
  	 	"trans": "výdrž",
  	 	"eng": "durability"
@@ -6750,39 +6787,6 @@
  	 	 	"eng": "Dungeon cleared!"
  	 	}
  	},
- 	"inventory": {
- 	 	"ui": {
- 	 	 	"useItem": {
- 	 	 	 	"localFightCantUseItem": {
- 	 	 	 	 	"trans": "Tuto položku nelze použít během boje na ulicích, je k dispozici pouze v průběhu dungeonů",
- 	 	 	 	 	"eng": "You cannot use item during street fights, items are only available during dungeons"
- 	 	 	 	}
- 	 	 	},
- 	 	 	"autoScrap": {
- 	 	 	 	"noItem": {
- 	 	 	 	 	"trans": "Nenalezen předmět pro automatické rozložení",
- 	 	 	 	 	"eng": "No item to auto scrap"
- 	 	 	 	}
- 	 	 	}
- 	 	},
- 	 	"useItemWithExistingBuffModal": {
- 	 	 	"title": {
- 	 	 	 	"trans": "Jste si jisti, že chcete tuto položku použít?",
- 	 	 	 	"eng": "Are you sure you want to use this item?"
- 	 	 	},
- 	 	 	"description": {
- 	 	 	 	"vars": [
- 	 	 	 	 	"remaining"
- 	 	 	 	],
- 	 	 	 	"trans": "Použitím této položky obnoví časovač aktuálního aktivního buff a naskládáte efekt, pokud je to použitelné. (${remaining})",
- 	 	 	 	"eng": "By using this item will refresh the timer of current active buff and stack the effect if applicable. (${remaining})"
- 	 	 	},
- 	 	 	"confirmText": {
- 	 	 	 	"trans": "Použití",
- 	 	 	 	"eng": "Use"
- 	 	 	}
- 	 	}
- 	},
  	"tier": {
  	 	"trash": {
  	 	 	"name": {
@@ -7412,6 +7416,12 @@
  	 	 	 	 	"trans": "Umožněte tomuto hráči spravovat povolení ostatních hráčů",
  	 	 	 	 	"eng": "Allow this player to manage permission of other players"
  	 	 	 	}
+ 	 	 	}
+ 	 	},
+ 	 	"error": {
+ 	 	 	"inviteCooldown": {
+ 	 	 	 	"trans": "Tento hráč jste již pozvali",
+ 	 	 	 	"eng": "You have already invited this player recently"
  	 	 	}
  	 	},
  	 	"notInGang": {
