--- a/contribution/lang/fr.json
+++ b/contribution/lang/fr.json
@@ -2648,6 +2648,43 @@
  	 	 	"eng": "Requires you to be in the Top 2 Gangs on the Occupation Leaderboard"
  	 	}
  	},
+ 	"inventory": {
+ 	 	"scrap": {
+ 	 	 	"trans": "abandonner",
+ 	 	 	"eng": "scrap"
+ 	 	},
+ 	 	"ui": {
+ 	 	 	"useItem": {
+ 	 	 	 	"localFightCantUseItem": {
+ 	 	 	 	 	"trans": "Tu ne peux pas utiliser d'objet pendant les combats de rue, les objets sont uniquement disponibles dans les donjons",
+ 	 	 	 	 	"eng": "You cannot use item during street fights, items are only available during dungeons"
+ 	 	 	 	}
+ 	 	 	},
+ 	 	 	"autoScrap": {
+ 	 	 	 	"noItem": {
+ 	 	 	 	 	"trans": "Aucun objet à recycler automatiquement",
+ 	 	 	 	 	"eng": "No item to auto scrap"
+ 	 	 	 	}
+ 	 	 	}
+ 	 	},
+ 	 	"useItemWithExistingBuffModal": {
+ 	 	 	"title": {
+ 	 	 	 	"trans": "Êtes-vous sûr que vous souhaitez utiliser cet élément?",
+ 	 	 	 	"eng": "Are you sure you want to use this item?"
+ 	 	 	},
+ 	 	 	"description": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"remaining"
+ 	 	 	 	],
+ 	 	 	 	"trans": "En utilisant cet élément, actualisera la minuterie du buff actif actuel et empilera l'effet le cas échéant. (${remaining})",
+ 	 	 	 	"eng": "By using this item will refresh the timer of current active buff and stack the effect if applicable. (${remaining})"
+ 	 	 	},
+ 	 	 	"confirmText": {
+ 	 	 	 	"trans": "Utilisation",
+ 	 	 	 	"eng": "Use"
+ 	 	 	}
+ 	 	}
+ 	},
  	"misc,durability": {
  	 	"trans": "résistance",
  	 	"eng": "durability"
@@ -6750,39 +6787,6 @@
  	 	 	"eng": "Dungeon cleared!"
  	 	}
  	},
- 	"inventory": {
- 	 	"ui": {
- 	 	 	"useItem": {
- 	 	 	 	"localFightCantUseItem": {
- 	 	 	 	 	"trans": "Tu ne peux pas utiliser d'objet pendant les combats de rue, les objets sont uniquement disponibles dans les donjons",
- 	 	 	 	 	"eng": "You cannot use item during street fights, items are only available during dungeons"
- 	 	 	 	}
- 	 	 	},
- 	 	 	"autoScrap": {
- 	 	 	 	"noItem": {
- 	 	 	 	 	"trans": "Aucun objet à recycler automatiquement",
- 	 	 	 	 	"eng": "No item to auto scrap"
- 	 	 	 	}
- 	 	 	}
- 	 	},
- 	 	"useItemWithExistingBuffModal": {
- 	 	 	"title": {
- 	 	 	 	"trans": "Êtes-vous sûr que vous souhaitez utiliser cet élément?",
- 	 	 	 	"eng": "Are you sure you want to use this item?"
- 	 	 	},
- 	 	 	"description": {
- 	 	 	 	"vars": [
- 	 	 	 	 	"remaining"
- 	 	 	 	],
- 	 	 	 	"trans": "En utilisant cet élément, actualisera la minuterie du buff actif actuel et empilera l'effet le cas échéant. (${remaining})",
- 	 	 	 	"eng": "By using this item will refresh the timer of current active buff and stack the effect if applicable. (${remaining})"
- 	 	 	},
- 	 	 	"confirmText": {
- 	 	 	 	"trans": "Utilisation",
- 	 	 	 	"eng": "Use"
- 	 	 	}
- 	 	}
- 	},
  	"tier": {
  	 	"trash": {
  	 	 	"name": {
@@ -7412,6 +7416,12 @@
  	 	 	 	 	"trans": "Permet à ce joueur de gérer la permission des autres joueurs",
  	 	 	 	 	"eng": "Allow this player to manage permission of other players"
  	 	 	 	}
+ 	 	 	}
+ 	 	},
+ 	 	"error": {
+ 	 	 	"inviteCooldown": {
+ 	 	 	 	"trans": "Vous avez déjà invité ce joueur récemment",
+ 	 	 	 	"eng": "You have already invited this player recently"
  	 	 	}
  	 	},
  	 	"notInGang": {
