--- a/contribution/lang/ru.json
+++ b/contribution/lang/ru.json
@@ -2648,6 +2648,43 @@
  	 	 	"eng": "Requires you to be in the Top 2 Gangs on the Occupation Leaderboard"
  	 	}
  	},
+ 	"inventory": {
+ 	 	"scrap": {
+ 	 	 	"trans": "лом",
+ 	 	 	"eng": "scrap"
+ 	 	},
+ 	 	"ui": {
+ 	 	 	"useItem": {
+ 	 	 	 	"localFightCantUseItem": {
+ 	 	 	 	 	"trans": "Вы не можете использовать этот предмет во время уличных боев, он доступен только во время подземелья",
+ 	 	 	 	 	"eng": "You cannot use item during street fights, items are only available during dungeons"
+ 	 	 	 	}
+ 	 	 	},
+ 	 	 	"autoScrap": {
+ 	 	 	 	"noItem": {
+ 	 	 	 	 	"trans": "Нечего разбирать",
+ 	 	 	 	 	"eng": "No item to auto scrap"
+ 	 	 	 	}
+ 	 	 	}
+ 	 	},
+ 	 	"useItemWithExistingBuffModal": {
+ 	 	 	"title": {
+ 	 	 	 	"trans": "Вы уверены, что хотите использовать этот предмет?",
+ 	 	 	 	"eng": "Are you sure you want to use this item?"
+ 	 	 	},
+ 	 	 	"description": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"remaining"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Используя этот предмет, будет обновлен таймер текущего активного баффа и эффект сложится, если это возможно. (${remaining})",
+ 	 	 	 	"eng": "By using this item will refresh the timer of current active buff and stack the effect if applicable. (${remaining})"
+ 	 	 	},
+ 	 	 	"confirmText": {
+ 	 	 	 	"trans": "Использовать",
+ 	 	 	 	"eng": "Use"
+ 	 	 	}
+ 	 	}
+ 	},
  	"misc,durability": {
  	 	"trans": "прочность",
  	 	"eng": "durability"
@@ -6750,39 +6787,6 @@
  	 	 	"eng": "Dungeon cleared!"
  	 	}
  	},
- 	"inventory": {
- 	 	"ui": {
- 	 	 	"useItem": {
- 	 	 	 	"localFightCantUseItem": {
- 	 	 	 	 	"trans": "Вы не можете использовать этот предмет во время уличных боев, он доступен только во время подземелья",
- 	 	 	 	 	"eng": "You cannot use item during street fights, items are only available during dungeons"
- 	 	 	 	}
- 	 	 	},
- 	 	 	"autoScrap": {
- 	 	 	 	"noItem": {
- 	 	 	 	 	"trans": "Нечего разбирать",
- 	 	 	 	 	"eng": "No item to auto scrap"
- 	 	 	 	}
- 	 	 	}
- 	 	},
- 	 	"useItemWithExistingBuffModal": {
- 	 	 	"title": {
- 	 	 	 	"trans": "Вы уверены, что хотите использовать этот предмет?",
- 	 	 	 	"eng": "Are you sure you want to use this item?"
- 	 	 	},
- 	 	 	"description": {
- 	 	 	 	"vars": [
- 	 	 	 	 	"remaining"
- 	 	 	 	],
- 	 	 	 	"trans": "Используя этот предмет, будет обновлен таймер текущего активного баффа и эффект сложится, если это возможно. (${remaining})",
- 	 	 	 	"eng": "By using this item will refresh the timer of current active buff and stack the effect if applicable. (${remaining})"
- 	 	 	},
- 	 	 	"confirmText": {
- 	 	 	 	"trans": "Использовать",
- 	 	 	 	"eng": "Use"
- 	 	 	}
- 	 	}
- 	},
  	"tier": {
  	 	"trash": {
  	 	 	"name": {
@@ -7412,6 +7416,12 @@
  	 	 	 	 	"trans": "Позволить этому игроку изменять разрешения других игроков",
  	 	 	 	 	"eng": "Allow this player to manage permission of other players"
  	 	 	 	}
+ 	 	 	}
+ 	 	},
+ 	 	"error": {
+ 	 	 	"inviteCooldown": {
+ 	 	 	 	"trans": "Вы уже недавно пригласили этого игрока",
+ 	 	 	 	"eng": "You have already invited this player recently"
  	 	 	}
  	 	},
  	 	"notInGang": {
