--- a/contribution/lang/th.json
+++ b/contribution/lang/th.json
@@ -2648,6 +2648,43 @@
  	 	 	"eng": "Requires you to be in the Top 2 Gangs on the Occupation Leaderboard"
  	 	}
  	},
+ 	"inventory": {
+ 	 	"scrap": {
+ 	 	 	"trans": "เศษ",
+ 	 	 	"eng": "scrap"
+ 	 	},
+ 	 	"ui": {
+ 	 	 	"useItem": {
+ 	 	 	 	"localFightCantUseItem": {
+ 	 	 	 	 	"trans": "คุณไม่สามารถใช้ไอเท็มในระหว่างการต่อสู้บนท้องถนน ไอเท็มมีให้เฉพาะในระหว่างดันเจี้ยนเท่านั้น",
+ 	 	 	 	 	"eng": "You cannot use item during street fights, items are only available during dungeons"
+ 	 	 	 	}
+ 	 	 	},
+ 	 	 	"autoScrap": {
+ 	 	 	 	"noItem": {
+ 	 	 	 	 	"trans": "ไม่มีไอเท็มเพื่อย่อยอัตโนมัติ",
+ 	 	 	 	 	"eng": "No item to auto scrap"
+ 	 	 	 	}
+ 	 	 	}
+ 	 	},
+ 	 	"useItemWithExistingBuffModal": {
+ 	 	 	"title": {
+ 	 	 	 	"trans": "แน่ใจหรือว่าต้องการใช้รายการนี้?",
+ 	 	 	 	"eng": "Are you sure you want to use this item?"
+ 	 	 	},
+ 	 	 	"description": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"remaining"
+ 	 	 	 	],
+ 	 	 	 	"trans": "โดยการใช้รายการนี้จะรีเฟรชตัวจับเวลาของ Buff ที่ใช้งานอยู่ในปัจจุบันและสแต็คเอฟเฟกต์หากมี (${remaining})",
+ 	 	 	 	"eng": "By using this item will refresh the timer of current active buff and stack the effect if applicable. (${remaining})"
+ 	 	 	},
+ 	 	 	"confirmText": {
+ 	 	 	 	"trans": "ใช้",
+ 	 	 	 	"eng": "Use"
+ 	 	 	}
+ 	 	}
+ 	},
  	"misc,durability": {
  	 	"trans": "ความทนทาน",
  	 	"eng": "durability"
@@ -6750,39 +6787,6 @@
  	 	 	"eng": "Dungeon cleared!"
  	 	}
  	},
- 	"inventory": {
- 	 	"ui": {
- 	 	 	"useItem": {
- 	 	 	 	"localFightCantUseItem": {
- 	 	 	 	 	"trans": "คุณไม่สามารถใช้ไอเท็มในระหว่างการต่อสู้บนท้องถนน ไอเท็มมีให้เฉพาะในระหว่างดันเจี้ยนเท่านั้น",
- 	 	 	 	 	"eng": "You cannot use item during street fights, items are only available during dungeons"
- 	 	 	 	}
- 	 	 	},
- 	 	 	"autoScrap": {
- 	 	 	 	"noItem": {
- 	 	 	 	 	"trans": "ไม่มีไอเท็มเพื่อย่อยอัตโนมัติ",
- 	 	 	 	 	"eng": "No item to auto scrap"
- 	 	 	 	}
- 	 	 	}
- 	 	},
- 	 	"useItemWithExistingBuffModal": {
- 	 	 	"title": {
- 	 	 	 	"trans": "แน่ใจหรือว่าต้องการใช้รายการนี้?",
- 	 	 	 	"eng": "Are you sure you want to use this item?"
- 	 	 	},
- 	 	 	"description": {
- 	 	 	 	"vars": [
- 	 	 	 	 	"remaining"
- 	 	 	 	],
- 	 	 	 	"trans": "โดยการใช้รายการนี้จะรีเฟรชตัวจับเวลาของ Buff ที่ใช้งานอยู่ในปัจจุบันและสแต็คเอฟเฟกต์หากมี (${remaining})",
- 	 	 	 	"eng": "By using this item will refresh the timer of current active buff and stack the effect if applicable. (${remaining})"
- 	 	 	},
- 	 	 	"confirmText": {
- 	 	 	 	"trans": "ใช้",
- 	 	 	 	"eng": "Use"
- 	 	 	}
- 	 	}
- 	},
  	"tier": {
  	 	"trash": {
  	 	 	"name": {
@@ -7412,6 +7416,12 @@
  	 	 	 	 	"trans": "อนุญาตให้ผู้เล่นคนนี้จัดการการอนุญาตของผู้เล่นคนอื่น ๆ",
  	 	 	 	 	"eng": "Allow this player to manage permission of other players"
  	 	 	 	}
+ 	 	 	}
+ 	 	},
+ 	 	"error": {
+ 	 	 	"inviteCooldown": {
+ 	 	 	 	"trans": "คุณได้เชิญผู้เล่นคนนี้ไปแล้วเมื่อเร็ว ๆ นี้",
+ 	 	 	 	"eng": "You have already invited this player recently"
  	 	 	}
  	 	},
  	 	"notInGang": {
